--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,8 +3,8 @@ android-buildTools = "35.0.0"
 android-compileSdk = "35"
 android-gradlePlugin = "8.7.3"
 
-androidx-activity-compose = "1.9.3"
-androidx-datastore = "1.1.1"
+androidx-activity-compose = "1.10.1"
+androidx-datastore = "1.1.3"
 
 compose = "1.7.3"
 compose-navigation = "2.8.0-alpha11"
@@ -12,7 +12,7 @@ compose-lifecycle = "2.8.4"
 compose-android = "1.7.6"
 
 koin = "4.0.0"
-koin-annotations = "2.0.0-Beta2"
+koin-annotations = "2.0.0"
 
 kotlin = "2.1.0"
 kotlin-coroutines = "1.9.0"
